# CryptoDeal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.txt  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  run.sh  runCelery.sh  webpack.config.js
app/: __init__.py  aliens.py  config.py  logger.py  mail.py  routes.py  shemas.py
app/apis/: __init__.py  auth.py  crypto.py  profile.py  sessions.py  user.py
app/database/postgre/: __init__.py  models.py  services.py  utc_time.py
app/database/redisdb/: __init__.py  services.py
app/migrations/: env.py
app/migrations/versions/: 357d019c4741_.py  5e2c789250ae_.py  b25af5566caa_.py  b9268f327536_.py
app/security/: JWT.py  __init__.py  decorators.py  generators.py
app/static/css/: aboutStyles.min.css  cryptoList.css  cryptoList.min.css  cryptoListStyles.min.css  cryptocurrency.css  cryptocurrency.min.css  cryptocurrencyStyles.min.css  index.css  index.min.css  indexStyles.min.css  navbar.css  newsStyles.min.css  notFound.css  notFoundStyles.min.css  profile.css  profile.min.css  profileStyles.min.css  securitiesStyles.min.css
app/static/js/: aboutStyles.min.js  cryptoList.js  cryptoList.min.js  cryptoList0.min.js  cryptoListStyles.min.js  cryptocurrency.min.js  cryptocurrencyStyles.min.js  index.min.js  (+9 more)
app/taskQueue/: mail_tasks.py  postgre_tasks.py  redis_tasks.py
app/tasks/: __init__.py  mail.py  postgre.py  redis.py
app/templates/: about.html  base.html  cryptoList.html  cryptocurrency.html  index.html  news.html  notFound.html  profile.html  securities.html  unauthorized.html
app/utils/: JWT.py  aliases.py  decorators.py  generators.py  push_test_data.py
application/: __init__.py  config.py  logger.py  routes.py  shemas.py  utc_time.py
application/apis/: __init__.py  auth.py  profile.py  sessions.py
application/database/: models.py  services.py
application/mail/: senders.py
application/taskQueue/: __init__.py  mail_tasks.py  postgre_tasks.py  redis_tasks.py
application/templates/: base.html  index.html  profile.html  test.html
application/utils/: JWT.py  cryptography.py  decorators.py  generators.py  other.py
frontend/js/: cryptoList.js  cryptoListStyles.js  cryptocurrency.js  cryptocurrencyStyles.js  index.js  notFoundStyles.js  profile.js  profileStyles.js  securitiesStyles.js
frontend/scss/: _base.scss  _colors.scss  _const.scss  _font.scss  _mixins.scss  _reset.scss  about.scss  cryptoList(old).scss  cryptoList.scss  cryptocurrency(old).scss  cryptocurrency.scss  index(old).scss  index.scss  news.scss  notFound.scss  profile.scss  securities.scss
images/nginx/: Dockerfile  nginx.conf
migration/: env.py
scripts/: crypto_description.py  push_data.py  runCelery.sh  run_celery.sh  stopCelery.sh
(+45 files in other folders)
