[tool.poetry]
name = "CryptoDeal"
version = "0.1.0"
description = "Exchange for securities and cryptocurrency trading education."
authors = ["LaryStef <timurkotov1999@gmail.com>"]
maintainers = ["kramber1024 <kramber268@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LaryStef/CryptoDeal"

[tool.poetry.dependencies]
python = "^3.11"
aniso8601 = "9.0.1"
attrs = "23.2.0"
autopep8 = "2.0.4"
bcrypt = "4.1.3"
blinker = "1.7.0"
click = "8.1.7"
colorama = "0.4.6"
flask = "3.0.2"
flask-mail = "0.9.1"
flask-marshmallow = "1.2.1"
flask-redis-ext = "1.0.0"
flask-restx = "1.3.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
importlib-resources = "6.4.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
markupsafe = "2.1.5"
marshmallow = "3.21.2"
packaging = "24.0"
psycopg2-binary = "2.9.9"
pycodestyle = "2.11.1"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
pytz = "2024.1"
redis = "5.0.4"
referencing = "0.35.1"
rpds-py = "0.18.0"
setuptools = "70.1.1"
sqlalchemy = "2.0.29"
typing-extensions = "4.11.0"
werkzeug = "3.0.3"
wheel = "0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
