[tool.poetry]
name = "CryptoDeal"
version = "0.1.0"
description = "Exchange for securities and cryptocurrency trading education."
authors = ["LaryStef <timurkotov1999@gmail.com>"]
maintainers = ["kramber1024 <kramber268@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LaryStef/CryptoDeal"

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "4.1.3"
flask = "3.0.2"
flask-mail = "0.9.1"
flask-marshmallow = "1.2.1"
flask-redis-ext = "1.0.0"
flask-restx = "1.3.0"
flask-sqlalchemy = "3.1.1"
pyjwt = "2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore-missing-imports = True